--- a/zkhwClient/Properties/Resources.resx
+++ b/zkhwClient/Properties/Resources.resx
@@ -139,4 +139,10 @@
   <data name="czz" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\czz.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="zx" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\zx.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tx" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\tx.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
